--- a/03-05/app/templates/index.html
+++ b/03-05/app/templates/index.html
@@ -4,30 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>latihan membuat tabel</title>
+<style>    
+    table {
+        font-family: arial sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td,th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+</style>
 </head>
+
 <body>
     <div>
-        <h1>ini request</h1>
-        <form action="" method="post">
-            <label for=>nama</label>
-            <input name="nama"type="text" requered>
-            <label for=>detail</label>
-            <input name="detail"type="text">
-            <button type="submit">kirim</button>
-
-        </form>
+    <h1>ini request</h1>
+    <form action=""method=""POST>
+        <label for="">nama</label>
+        <input name="nama" type="text">
+        <label for="">detail</label>
+        <input name="detail" type="text" required>
+        <button type="submit">kirim</button>
+    </form>
 
         <hr>
         <h1>ini response</h1>
-        {{context}}
         <br>
-        
-        {% for d in context %}
-        <ul>
-        <ul>{{d}}</ul>
-    </ul>
-    {% endfor %}
+         <table>
+            <tr>
+                <th>id</th>
+                <th>nama</th>
+                <th>actions</th>
+                
+            </tr>
+            {% for d in context %}
+            <tr>
+                <td>{{d[0]}}</td>
+                <td>{{d[1]}}</td>
+                <td>
+                <a href="/detail/{{d[0]}}">
+                    <button>detail</button>
+                </a>
+                <a href="">
+                    <button>update</button>
+                </a>
+                <a href="/delete/{{d[0]}}">
+                    <button>delete</button>
+                </a>
+                </td>
+            </tr>
+                {% endfor%}
+        </table>
     </div>
-</body>
-</html>
+    </body>
+
+    </html>
