--- a/03-05/app/templates/index.html
+++ b/03-05/app/templates/index.html
@@ -13,13 +13,13 @@
     }
 
     td,th {
-        border: 1px solid #dddddd;
+        border: 1px solid #df5d5d;
         text-align: left;
         padding: 8px;
     }
 
     tr:nth-child(even) {
-        background-color: #dddddd;
+        background-color: #e414c1e7;
     }
 </style>
 </head>
@@ -27,11 +27,9 @@
 <body>
     <div>
     <h1>ini request</h1>
-    <form action=""method=""POST>
-        <label for="">nama</label>
+    <form action=""method="POST">
         <input name="nama" type="text">
-        <label for="">detail</label>
-        <input name="detail" type="text" required>
+        <input name="detail" type="detail" required>
         <button type="submit">kirim</button>
     </form>
 
@@ -47,22 +45,33 @@
             </tr>
             {% for d in context %}
             <tr>
-                <td>{{d[0]}}</td>
+                <td>{{loop.index}}</td>
                 <td>{{d[1]}}</td>
                 <td>
                 <a href="/detail/{{d[0]}}">
-                    <button>detail</button>
+                    <button class="btn btn-info">detail</button>
                 </a>
-                <a href="">
-                    <button>update</button>
+                <a href="/update/{{d[0]}}">
+                    <button class="btn-btn-warning">update</button>
                 </a>
                 <a href="/delete/{{d[0]}}">
-                    <button>delete</button>
+                    <button class="btn-btn-denger">delete</button>
                 </a>
                 </td>
             </tr>
                 {% endfor%}
         </table>
+
+<hr>
+<h1>ini response</h1>
+{{context}}
+<br>
+{% for d in contex %}
+<ul>
+    <li>{{d}}</li>
+</ul>
+{% endfor %}
+
     </div>
     </body>
 
